Create threads for clients

--- a/rapp_platform_ros_communications/CMakeLists.txt
+++ b/rapp_platform_ros_communications/CMakeLists.txt
@@ -117,6 +117,7 @@ add_service_files(
   /ApplicationAuthentication/AddNewUserFromPlatformSrv.srv
 
   /VisualLocalization/Localize.srv
+  /VisualLocalization/LocalizeInit.srv
 )
 
 ## Generate added messages and services with any dependencies listed here
